<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

<item
    android:id="@+id/app_bar_search"
    android:icon="@drawable/ic_action_search"
    app:actionViewClass="android.widget.SearchView"
    app:showAsAction="ifRoom"
    tools:ignore="MenuTitle"/>
    <group>
    <item android:title="@string/reproductor"
       android:id="@+id/rep" />
    <item android:title="@string/perfil"
        android:id="@+id/Perf"/>
    <item android:title="@string/im_genes"
        android:id="@+id/img"/>
    <item android:title="@string/videos"
        android:id="@+id/vid"/>
    <item android:title="@string/web"
        android:id="@+id/web"/>
    <item android:title="@string/lista_de_canciones"
        android:id="@+id/mp3"/>
    </group>
</menu>