<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".PerfilActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="115dp"
        android:layout_height="113dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23"
        app:srcCompat="@drawable/usuraio_1" />



    <TextView
        android:id="@+id/UserPerfiltextView"
        android:layout_width="174dp"
        android:layout_height="30dp"
        android:text="@string/UserPro"
        android:textColor="#D081F2"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.340" />




    <TextView
        android:id="@+id/NametextView"
        android:layout_width="270dp"
        android:layout_height="30dp"
        android:text="@string/UsuarioProyecto"
        android:textColor="#F4F1F1"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.640" />

    <TextView
        android:id="@+id/UsertextView"
        android:layout_width="174dp"
        android:layout_height="30dp"
        android:text="@string/UserPro"
        android:textColor="#F4F1F1"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.680" />

    <TextView
        android:id="@+id/CorretextView"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:text="@string/UserCorreo"
        android:textColor="#F4F1F1"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.720" />

    <TextView
        android:id="@+id/RedtextView"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:text="@string/Redes"
        android:textColor="#DB91FB"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.800" />

    <Button
        android:id="@+id/EditartextView"
        android:layout_width="121dp"
        android:layout_height="27dp"
        android:background="@drawable/botonlog"
        android:text="@string/Editar"
        android:textColor="#DB91FB"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100"
        tools:ignore="TouchTargetSizeCheck" />


    <TextView
        android:id="@+id/InstgtextView"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:text="@string/Instagram"
        android:textColor="#F4F1F1"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.830" />


    <TextView
        android:id="@+id/SiguiendotextView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/Siguiendo"
        android:textColor="#A09898"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/SeguidorestextView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/Siguidores"
        android:textColor="#A09898"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/MegustatextView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/Megusta"
        android:textColor="#A09898"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />


    <TextView
        android:id="@+id/DatostextView"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:text="@string/Datos"
        android:textColor="#D081F2"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.610" />

    <TextView
        android:id="@+id/FacetextView"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:text="@string/Facebook"
        android:textColor="#F4F1F1"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.870" />

    <TextView
        android:id="@+id/YoututextView"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:text="@string/Youtube"
        android:textColor="#F4F1F1"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.910" />

    <Button
        android:id="@+id/Perfil"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="450dp"
        android:background="@drawable/botonlog"
        android:text="Mis Playlist"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>